--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-to run program run "python3 /path/to/file/icecream.py"
+to run program run "python3 /path/to/file/icecream.py" in a terminal or CMD session
